--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^16.6.3",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
-    "react-jss": "^8.6.1"
+    "react-jss": "^8.6.1",
+    "gatsby-starter-fine": "^2.0.20"
   },
   "devDependencies": {
     "gatsby-disable-404": "^0.2.1",
